# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.121 2004/12/12 16:39:11 wolf31o2 Exp $

  12 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
  livecd/runscript/sparc-archscript.sh,
  livecd/runscript/sparc64-archscript.sh,
  livecd/runscript/x86-archscript.sh:
  Added failures to all arches on mkisofs failure and also made -z option to
  mkisofs optional on x86 depending on loop type used.

  12 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/x86-archscript.sh:
  Making sure the mkisofs call causes a failure when it doesn't complete
  successfully. Once again, blame jforman, our beloved infra-monkey.

  12 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/default-runscript.sh:
  squashfs-utils->squashfs-tools fix.  Blame jforman.

  09 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/isogen/x86-isogen.sh:
  Removed -no-emul-boot from x86-isogen.sh to keep the ISO being made from
  possibly not booting on really old systems.

  09 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/x86-archscript.sh:
  Removed -no-emul-boot from x86-archscript.sh to keep the ISO being made from
  possibly not booting on really old systems.

  08 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Save some space by removing redundant firmware after tarball is made, only
  perform sed on /etc/conf.d/gpm if it exists, and change fstab to be more
  readable.

  06 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean2-chroot.sh:
  Added patch from vapier and closing bug #73556.

  22 Nov 2004; John Davis <zhen@gentoo.org> modules/embedded_target.py,
  modules/generic_stage_target.py, -targets/embedded/cramfs-runscript.sh,